--- a/styles/message/message.module.scss
+++ b/styles/message/message.module.scss
@@ -1,66 +1,24 @@
 @use '../mixins.scss' as *;
 
-.input {
-  @include input(800px);
-}
-
-.inputWrapper {
-  position: relative;
-  margin-bottom: 1rem;
-}
-
-.reInputWrapper {
-  max-width: fit-content;
-  margin: auto;
-  margin-bottom: 1rem;
-
-  @media screen and (max-width: 490px) {
-    transform: scale(0.7);
-    -webkit-transform: scale(0.7);
-  }
-}
-
-.inputIcon {
-  position: absolute;
-  top: 55%;
-  left: 10px;
-  width: 18px;
-  transform: translateY(calc(-50% - 1px));
-  circle,
-  line {
-    opacity: 0.6;
-    stroke: var(--text);
-  }
-}
-
-.inputIcon2 {
-  position: absolute;
-  top: 24%;
-  left: 10px;
-  width: 18px;
-  transform: translateY(calc(-50% - 1px));
-  circle,
-  line {
-    opacity: 0.6;
-    stroke: var(--text);
-  }
-}
-
 .messageComponent {
-  width: 100%;
-  margin-bottom: 2rem;
+  width: 100%; // reduce width to 80% of the parent element
+  margin: 2rem auto; // center the element horizontally
   padding: 1rem;
   border: 1px solid var(--text);
   border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .messageContainer {
-  max-width: fit-content;
-  margin: auto;
-  margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .headingContainer {
+  align-self: center;
   max-width: fit-content;
   margin: auto;
 }
@@ -72,20 +30,43 @@
   color: var(--brand);
 }
 
-.sendMessage {
-  @include bwButton;
+.subContainer,
+.gifHandler {
+  flex: 1;
+  animation: fadeIn 2s ease-in-out;
+  background-color: rgba(255, 255, 255, 0.5); // white with 50% opacity
+  padding: 1rem;
+  border-radius: 1rem;
+  order: 1;
+  width: 100%;
+  max-width: 600px; // limit width for larger screens
+
+  a {
+    color: yellow;
+  }
+    svg {
+      color: yellow;
+    }
 }
 
-.confettiText {
-  max-width: fit-content;
-  margin: auto;
-  margin-top: 1rem;
-  padding: 2px;
-  color: var(--textTinted);
-  cursor: pointer;
-  transition: all 0.2s;
+.gifHandler {
+  border: none;
+  margin: 0;
+  order: 2;
+}
 
-  &:active {
-    transform: scale(0.9);
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@media (max-width: 768px) {
+  .subContainer {
+    font-size: 14px;
   }
 }
